user_deployment_and_service_manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "ODanylchuk", "-d", "UsersDB"]
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: users-microservice
  namespace: default
spec:
  selector:
    app: users-microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672 
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-microservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-microservice
  template:
    metadata:
      labels:
        app: users-microservice
    spec:
      containers:
        - name: users-microservice
          image: odanylchuk/userservice:latest
          ports:
            - containerPort: 8080
      restartPolicy: Always
